Avoid MatchedPropertiesCache table modifications when forbidden

In MatchedPropertiesCache::Add, we use insert(), and keep an AddResult
object on the stack. During its lifetime, modifications to the hash
table are forbidden (see ~HashTableAddResult).

On the surface, it doesn't look like we are modifying the hash table
during the AddResult, however, since we call MakeGarbageCollected, we
may trigger a synchronous GC/Trace at that point, which ends up in
RemoveCachedMatchedPropertiesWithDeadEntries via the special callback,
and that function *does* modify the hash table.

This CL fixes that (hopefully), by narrowing the scope of AddResult.
Note that even though RemoveCachedMatchedPropertiesWithDeadEntries
removes items from |cache_|, the hash map is aware that allocations
are forbidden during the weakness callback, and hence will avoid
rehashing. Therefore the |cache_item| reference will remain valid
even if MakeGarbageCollected<CachedMatchedProperties>() triggers a GC.

Fixed: 915474
Change-Id: I7b7b4287fe410615af6a6a8d2041c17db211b0ce
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3074199
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Anders Hartvoll Ruud <andruud@chromium.org>
Cr-Commit-Position: refs/heads/master@{#909773}